--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Étudiante en Informatique</title>
+    <title>Portfolio - Sira Diarra</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Pour les icônes -->
@@ -13,7 +13,7 @@
 
     <header>
         <nav>
-            <div class="logo"><span>Sira</span>Portfolio</div>
+            <div class="logo"><span>Sira</span>Diarra</div>
             <ul>
                 <li><a href="#hero">Accueil</a></li>
                 <li><a href="#about">À Propos</a></li>
@@ -126,8 +126,8 @@
             <h2>Mes Projets</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Systeme d'information automatisé de date de marriage</h3>
-                    <p>Permettre aux futurs mariés de consulter et réserver des dates disponibles pour leur mariage.</p>
+                    <h3>Systeme d'information automatisé des actes de marriage</h3>
+                    <p>Conception et réalisation d’un système d’information web permettant l’enregistrement, la validation et la délivrance automatisée des actes de mariage.</p>
                     <div class="project-tags">
                         <span>PHP</span><span>JAVASCRIPT</span><span>HTML&CSS</span><span>MYSQL</span>
                     </div>
@@ -137,12 +137,12 @@
                 </div>
                 <div class="project-card">
                     <h3>ChatBot Web</h3>
-                    <p>Une application web interactive permettant aux utilisateurs de dialoguer avec un chatbot et d’obtenir des réponses automatiques..</p>
+                    <p>Développement d’un chatbot automatique capable de dialoguer avec les utilisateurs en temps réel et de fournir des réponses personnalisées sans intervention humaine.</p>
                     <div class="project-tags">
-                        <span>Python</span><span>Flask</span><span>Machine Learning</span>
+                        <span>Coursera Lab Environment</span><span>Machine Learning</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank">Voir le Code</a>
+                        <a href="#" target="_blank"></a>
                     </div>
                 </div>
                 </div>
