--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <img src="SIRA.jpg" alt="Photo de profil">
                 </div>
                 <div class="about-text">
-                    <p>Jeune diplômée en Informatique de Gestion (Bac+3, ESGIC), ayant acquis des compétences solides en développement web (HTML, CSS, PHP, MySQL) et en conception de bases de données. J'ai réalisée des projets académiques concrets, notamment une base de données pour la gestion des dates de mariage et un chatbot web interactif.Je dispose également de bases en C++, Java et Python. Curieuse, motivée et organisée, elle cherche à mettre en pratique ses connaissances dans un environnement professionnel afin de développer davantage mon expertise technique.</p>
+                    <p>Jeune diplômée en Informatique de Gestion (Bac+3, ESGIC), ayant acquis des compétences solides en développement web (HTML, CSS, PHP, MySQL) et en conception de bases de données. J'ai réalisée des projets académiques concrets, notamment une base de données pour la gestion des actes de mariage et un chatbot web interactif.Je dispose également de bases en C++, Java et Python. Curieuse, motivée et organisée, je cherche à mettre en pratique mes connaissances dans un environnement professionnel afin de développer davantage mon expertise technique.</p>
                 </div>
             </div>
         </section>
