--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio - Sira Diarra</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Pour les icônes -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <div class="background-animation"></div>
@@ -40,7 +40,14 @@
                     <img src="SIRA.jpg" alt="Photo de profil">
                 </div>
                 <div class="about-text">
-                    <p>Jeune diplômée en Informatique de Gestion (Bac+3, ESGIC), ayant acquis des compétences solides en développement web (HTML, CSS, PHP, MySQL) et en conception de bases de données. J'ai réalisée des projets académiques concrets, notamment une base de données pour la gestion des actes de mariage et un chatbot web interactif.Je dispose également de bases en C++, Java et Python. Curieuse, motivée et organisée, je cherche à mettre en pratique mes connaissances dans un environnement professionnel afin de développer davantage mon expertise technique.</p>
+                    <p>Jeune diplômée en Informatique de Gestion Licence Bac+3 à l'ESGIC,
+passionnée par l'analyse et la valorisation des données. Formée aux
+technologies web (HTML, CSS, PHP, MysQL) et aux langages de programmation
+(C++, Java, Python) j'ai développé des projets académiques alliant conception
+de bases de données, traitement de l'information et mise en place
+d'applications. Rigoureuse, organisée et dotée d'un esprit analytique, je
+souhaite mettre mes compétences techniques et relationnelles au service de
+projets orientés data et business intelligence.</p>
                 </div>
             </div>
         </section>
